# vendor_osware

./: OAT.xml  README.en.md  README.md  README_zh.md
imx8mm/: config.json  ohos.build  product.gni
imx8mm/audio/: BUILD.gn
imx8mm/audio/arm64/: audio_policy_config.xml
imx8mm/bluetooth/: BUILD.gn
imx8mm/bluetooth/include/: bt_hci_bdroid.h  bt_vendor_brcm.h  esco_parameters.h  uipc_msg.h  upio.h  userial.h  userial_vendor.h
imx8mm/bluetooth/include/utils/: Log.h
imx8mm/bluetooth/src/: bt_vendor_brcm.c  conf.c  hardware.c  upio.c  userial_vendor.c
imx8mm/hals/audio/: BUILD.gn  audio_paths.json  product.gni
imx8mm/hals/audio/config/: audio_policy_config.xml
imx8mm/hdf_config/khdf/: Makefile  hdf.hcs
imx8mm/hdf_config/khdf/audio/: audio_config.hcs  codec_config.hcs  dai_config.hcs  dma_config.hcs  dsp_config.hcs
imx8mm/hdf_config/khdf/device_info/: device_info.hcs
imx8mm/hdf_config/khdf/ethernet/: eth_config.hcs
imx8mm/hdf_config/khdf/hdf_test/: Makefile  gpio_test_config.hcs  hdf.hcs  i2c_test_config.hcs  pwm_test_config.hcs  sdio_test_config.hcs  spi_test_config.hcs  uart_test_config.hcs
imx8mm/hdf_config/khdf/hdf_test/hdf_test_manager/: device_info.hcs
imx8mm/hdf_config/khdf/input/: input_config.hcs
imx8mm/hdf_config/khdf/platform/: imx8mm_emmc_config.hcs  imx8mm_i2c_config.hcs  imx8mm_pwm_config.hcs  imx8mm_sdio_config.hcs  imx8mm_spi_config.hcs  imx8mm_uart_config.hcs  imx8mm_watchdog_config.hcs
imx8mm/hdf_config/khdf/wifi/: wlan_chip_ap6212.hcs  wlan_platform.hcs
imx8mm/hdf_config/uhdf/: BUILD.gn  device_info.hcs  usb_cdcacm.hcs  usb_cdcecm.hcs  usb_ecm_acm.hcs
imx8mm/hdf_config/uhdf/camera/hdi_impl/: camera_host_config.hcs
imx8mm/hdf_config/uhdf/camera/pipeline_core/: config.hcs  ipp_algo_config.hcs  params.hcs
